# STM32F746G-DISCO-GUI_VNC-uvision

./: .clangd  .gitignore  Add bluetooth to GUI_VNC.docx  Blinky.c  BluetoothThread.c  FramewinDLG.c  GUI_SingleThread.c  LCD_X.c  NDEF.cbuild-gen-idx.yml  README.md  STM32F746G-DISCO-GUI_VNC-uvision+Target_1.cbuild-run.yml  STM32F746G-DISCO-GUI_VNC-uvision+Target_1.cbuild.yml  STM32F746G-DISCO-GUI_VNC-uvision.NDEF.cbuild-gen.yml  STM32F746G-DISCO-GUI_VNC-uvision.Target_1.cbuild-gen.yml  STM32F746G-DISCO-GUI_VNC-uvision.cbuild-idx.yml  STM32F746G-DISCO-GUI_VNC-uvision.cbuild-pack.yml  STM32F746G-DISCO-GUI_VNC-uvision.cbuild-set.yml  STM32F746G-DISCO-GUI_VNC-uvision.cproject.yml  STM32F746G-DISCO-GUI_VNC-uvision.csolution.yml  STM32F746G-DISCO-GUI_VNC-uvision.uvguix.Hans Naert  STM32F746G-DISCO-GUI_VNC-uvision.uvguix.u0081767  STM32F746G-DISCO-GUI_VNC-uvision.uvoptx  STM32F746G-DISCO-GUI_VNC-uvision.uvprojx  STM32F746G-DISCO-GUI_VNC-uvision_Target_1.sct  Target_1.cbuild-gen-idx.yml  Touch_746G_Discovery.c  USBD_User_CDC_ACM_UART_0.c  USBD_User_CustomClass_0.c  USBD_User_HID_0.c  USB_Device.cbuild-pack.yml  USB_Device.csolution.yml  nfc_display.c  nfc_display.h  stm32746g_discovery.c  stm32746g_discovery.h  stm32746g_discovery_ts.c  usart_bridge.c  vcpkg-configuration.json  vio.c
Board/STM32F746G-DISCO/: Board.clayer.yml  README.md  STM32F746G-DISCO.h
Board/STM32F746G-DISCO/CubeMX/: Board.cgen.yml  project.script
Board/STM32F746G-DISCO/CubeMX/MX_Device/: MX_Device.h
Board/STM32F746G-DISCO/CubeMX/STM32CubeMX/: .mxproject  STM32CubeMX.ioc
Board/STM32F746G-DISCO/CubeMX/STM32CubeMX/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Board/STM32F746G-DISCO/CubeMX/STM32CubeMX/MDK-ARM/: startup_stm32f746xx.s
Board/STM32F746G-DISCO/CubeMX/STM32CubeMX/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
Board/STM32F746G-DISCO/RTE/Device/STM32F746NGHx/: regions_STM32F746G-DISCO.h
HID/RTE/Device/STM32F746NGHx/: regions_STM32F746G-DISCO.h
HID/RTE/_Debug_STM32F746NGHx/: RTE_Components.h
PollingTagDetect/Inc/: platform.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
PollingTagDetect/Src/: demo.c  main.c  ndef_demo.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
RTE/CMSIS/: RTX_Config.h
RTE/Graphics/: GUIConf.c
RTE/USB/: USBD_Config_0.h  USBD_Config_HID_0.h
RTE/_NDEF/: RTE_Components.h
RTE/_Target_1/: RTE_Components.h
STM32CubeMX/NDEF/: STM32F746G-DISCO-GUI_VNC-uvision.cgen.yml
STM32CubeMX/NDEF/MX_Device/: MX_Device.h
STM32CubeMX/NDEF/STM32CubeMX/: .mxproject
STM32CubeMX/NDEF/STM32CubeMX/Inc/: main.h  stm32f7xx_it.h
STM32CubeMX/NDEF/STM32CubeMX/MDK-ARM/: STM32CubeMX.uvprojx
STM32CubeMX/NDEF/STM32CubeMX/Src/: stm32f7xx_hal_msp.c  stm32f7xx_it.c
STM32CubeMX/Target_1/: STM32F746G-DISCO-GUI_VNC-uvision.cgen.yml  project.script
STM32CubeMX/Target_1/MX_Device/: MX_Device.h
STM32CubeMX/Target_1/STM32CubeMX/: .mxproject  STM32CubeMX.ioc
STM32CubeMX/Target_1/STM32CubeMX/Inc/: ble_list_utils.h  bluenrg_conf.h  hci_tl_interface.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
STM32CubeMX/Target_1/STM32CubeMX/MDK-ARM/: STM32CubeMX.uvguix.u0081767  STM32CubeMX.uvoptx  STM32CubeMX.uvprojx
STM32CubeMX/Target_1/STM32CubeMX/MDK-ARM/RTE/_STM32CubeMX/: RTE_Components.h
STM32CubeMX/Target_1/STM32CubeMX/Src/: app_bluenrg_ms.c  hci_tl_interface_template.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
VirtualCOM/: USBD_User_CDC_ACM_UART_0.c
VirtualCOM/RTE/_Debug_STM32F746NGHx/: RTE_Components.h
tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
tmp/STM32F746G-DISCO-GUI_VNC-uvision+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
tmp/STM32F746G-DISCO-GUI_VNC-uvision+Target_1/src/STM32F746G-DISCO-GUI_VNC-uvision+Target_1-stamp/: STM32F746G-DISCO-GUI_VNC-uvision+Target_1-configure-.cmake  STM32F746G-DISCO-GUI_VNC-uvision+Target_1-database-.cmake  STM32F746G-DISCO-GUI_VNC-uvision+Target_1-source_dirinfo.txt
tmp/STM32F746G-DISCO-GUI_VNC-uvision+Target_1/tmp/: STM32F746G-DISCO-GUI_VNC-uvision+Target_1-cfgcmd.txt  STM32F746G-DISCO-GUI_VNC-uvision+Target_1-mkdirs.cmake
